--- a/kubernetes/06_loadbalancer.yaml
+++ b/kubernetes/06_loadbalancer.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: frontend-external
   namespace: nationalparks
 spec:
-  type: ClusterIP
+  type: LoadBalancer
+  selector:
+    app: mysql
   ports:
   - port: 3306
     targetPort: 3306
-  selector:
-    app: mysql
