--- a/kubernetes/04_pod.yaml
+++ b/kubernetes/04_pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mysql
   namespace: nationalparks
   labels:
-    app: mysql
+    io.imbm.service: mysql
 spec:
   containers:
     - image: mysql:8
