--- a/kubernetes/06_loadbalancer.yaml
+++ b/kubernetes/06_loadbalancer.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-external
+  name: mysql-external
   namespace: nationalparks
 spec:
   type: LoadBalancer
   selector:
-    app: mysql
+    io.imbm.service: mysql
   ports:
   - port: 3306
     targetPort: 3306
